--- a/client/package.json
+++ b/client/package.json
@@ -25,10 +25,12 @@
     "error-overlay-webpack-plugin": "^1.1.0",
     "eslint": "^8.22.0",
     "eslint-config-airbnb": "^19.0.4",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss": "^8.4.16",
     "postcss-loader": "^7.0.1",
+    "url-loader": "^4.1.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.10.0"
