--- a/client/package.json
+++ b/client/package.json
@@ -1,21 +1,27 @@
 {
-  "name": "siema task",
+  "name": "game",
   "version": "0.1.0",
   "description": "A game \"Who wants to become a Millionere\"",
-  "main": "index.js",
+  "main": "index.tsx",
   "scripts": {
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "start": "webpack serve --mode development"
+    "start": "webpack serve --mode development",
+    "lint": "eslint ./** --fix"
   },
   "author": "Mohyla <volikeurope@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^28.1.8",
+    "@types/node": "^18.7.13",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
+    "@babel/eslint-parser": "^7.18.9",
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^8.2.5",
@@ -23,13 +29,15 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "error-overlay-webpack-plugin": "^1.1.0",
-    "eslint": "^8.22.0",
+    "eslint": "^8.23.0",
     "eslint-config-airbnb": "^19.0.4",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss": "^8.4.16",
     "postcss-loader": "^7.0.1",
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.8.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
