--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,14 +1,19 @@
 {
     "compilerOptions": {
+      "moduleResolution": "node",
       "outDir": "./dist/",
-      "noImplicitAny": true,
+      "noImplicitAny": false,
       "module": "es6",
-      "target": "es5",
+      "lib": ["es6", "dom", "es2016", "es2017"],
+      "target": "es2016",
       "jsx": "react",
       "allowJs": true,
-      "moduleResolution": "node",
       "allowSyntheticDefaultImports": true,
       "resolveJsonModule": true
-    }
+    },
+    "include": [
+      "src/**/*"
+, "index.tsx"    ],
+    "exclude": ["node_modules", "dist"]
   }
   
